Modified types declaration for ant icons

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@ant-design/icons": "^5.1.4",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
